--- a/app/views/layouts/loginsane.html.erb
+++ b/app/views/layouts/loginsane.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Loginsane - Self-hosting, Open Source, Authentication Server</title>
+  <title>Loginsane - Self-hosted, Open Source, Authentication Server</title>
   <%= javascript_include_tag 'jquery-1.3.2.min.js' %>
   <%= @service ? "<style>#{@service.site.css}</style>" : stylesheet_link_tag('loginsane') %>
 </head>
