--- a/app/views/loginsane/return_to_service_callback.html.erb
+++ b/app/views/loginsane/return_to_service_callback.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Loginsane - Self-hosting, Open Source, Authentication Server</title>
+  <title>Loginsane - Self-hosted, Open Source, Authentication Server</title>
   <script type="text/javascript">
   (function(url, opener) {
     var wnd = opener || window;
