Fix missing fields regarding site.css

--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -56,7 +56,7 @@
     <%= f.text_field :callback_url %>
   </p>
   <p>
-    <%= f.label :css %> <span class="hint">to customize the look and feel of your embed.</span><br />
+    <%= f.label :css %> <span class="hint">to customize the look and feel on your site.</span><br />
     <%= f.text_area :css, :style => "height: 11em;" %>
   </p>
   <p>
