--- a/app/views/sites/edit.html.erb
+++ b/app/views/sites/edit.html.erb
@@ -14,6 +14,10 @@
     <%= f.text_field :callback_url %>
   </p>
   <p>
+    <%= f.label :css %> <span class="hint">to customize the look and feel on your site.</span><br />
+    <%= f.text_area :css, :style => "height: 11em;" %>
+  </p>
+  <p>
     <%= f.label :key %> <span class="hint">leave blank to generate a new key</span><br />
     <%= f.text_field :key %>
   </p>
