Baking in Yahoo & Google openid

--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -9,7 +9,7 @@
       Configure a site here &amp; add services to it (e.g. Facebook Connect, Twitter)
       </li>
     <li>
-      Copy your assigned <b>embed code</b> and paste it on your front page
+      Copy your assigned <b>embed code</b> and <a href="<%= image_path('example_embed.png') %>">paste it on your front page</a>
       </li>
     <li>
       The embed code will display a list of login options to visitors on your site
