--- a/app/views/loginsane/form.html.erb
+++ b/app/views/loginsane/form.html.erb
@@ -7,10 +7,14 @@
   jQuery('li:not(.facebook) a').live('click', function(event) {
     event.preventDefault();
     var anchor = jQuery(event.target).parents('a')[0] || event.target;
-    var child = window.open(anchor.href, 'loginsane','toolbar=0,status=0,width=800,height=600');
-    if (! child) window.top.location.href = anchor.href; // blocked popup
+    var child = window.open(<%= url_for(:action => 'redirect', :url => 'HREF').inspect %>.replace('HREF', encodeURIComponent (anchor.href)), 'loginsane','toolbar=0,status=0,width=800,height=600');
+    if (child) {
+      window.redirect_to = function(url) {
+        child.close();
+        window.top.location.href = url;
+      }
+    } else {
+      window.top.location.href = anchor.href; // blocked popup
+    }
   });
-  function redirect_to(url) {
-    window.top.location.href = url;
-  }
 </script>
