--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -25,4 +25,5 @@
 <%= link_to('Setup Facebook Connect', new_site_service_path(@site, :auth_type => 'facebook')) + " | " unless @site.services.find_by_auth_type('facebook') %>
 <%= link_to('Setup Twitter', new_site_service_path(@site, :auth_type => 'twitter')) + " | " unless @site.services.find_by_auth_type('twitter') %>
 <%= link_to('Setup OpenID Provider', new_site_service_path(@site, :auth_type => 'openid')) %> |
+<%= link_to('Setup POP3 Provider', new_site_service_path(@site, :auth_type => 'pop3')) %> |
 <%= link_to 'Grab embed code', site_path(@site) %>
