--- a/public/stylesheets/loginsane.css
+++ b/public/stylesheets/loginsane.css
@@ -8,6 +8,6 @@ li:hover { border-color: #eee; }
 label { font-weight: bold; }
 input[type='password'], input[type='text'], input[type='submit'], textarea { border: 1px solid #888; padding: 3px; }
 input:focus, textarea:focus { background-color: lightyellow; }
-#openid_form { width: 350px; padding: 3em; margin: 3em auto; border: 1px solid #999; background-color: #f8f8f8; }
+#pop3_form, #openid_form { width: 350px; padding: 3em; margin: 3em auto; border: 1px solid #999; background-color: #f8f8f8; }
 #other_openid_providers { margin-top: 2em; font-size: 0.9em; }
 .error { color: green; }
