--- a/app/views/services/_openid.html.erb
+++ b/app/views/services/_openid.html.erb
@@ -24,3 +24,14 @@
     </li>
   </ul>
 </div>
+
+<div class="instructions">
+  <p>
+    If you do not wish to use the site embed (aka multiple-services selector),
+    you may redirect your user to this authentication service directly
+    using the URL below:
+  </p>
+  <p>
+    <code title='triple-click to select the full url'><%=h url_for(:controller => 'loginsane', :action => 'openid_callback', :id => @service.id, :only_path => false) %></code>
+  </p>
+</div>
