--- a/app/views/loginsane/_openid.html.erb
+++ b/app/views/loginsane/_openid.html.erb
@@ -1,1 +1,1 @@
-<%= link_to image_tag(service.icon, :class => 'service_icon'), :action => 'openid_callback', :id => service.id, :openid_url => (service.key.blank? ? nil : service.key), :only_path => false %>
+<%= link_to image_tag(service.icon, :class => 'service_icon'), :controller => 'loginsane', :action => 'openid_callback', :id => service.id, :only_path => false %>
