--- a/app/views/loginsane/_twitter.html.erb
+++ b/app/views/loginsane/_twitter.html.erb
@@ -1,1 +1,1 @@
-<%= link_to image_tag(service.icon, :class => 'service_icon'), :action => 'twitter_redirect', :id => service.id, :only_path => false %>
+<%= link_to image_tag(service.icon, :class => 'service_icon'), :controller => 'loginsane', :action => 'twitter_redirect', :id => service.id, :only_path => false %>
