isolate, to allow multiple embeds on the same page

--- a/app/views/loginsane/embed.js.erb
+++ b/app/views/loginsane/embed.js.erb
@@ -1,9 +1,11 @@
-document.write('<div id="<%= params[:element_id] || "loginsane_frame" %>_wrapper"></div>');
-var iframe = document.createElement('iframe');
-iframe.id = <%= (params[:element_id] || "loginsane_frame").inspect %>;
-iframe.frameBorder = <%= params[:frameborder].to_i %>;
-iframe.scrolling = "no";
-iframe.src = <%= url_for(:action => "form", :id => params[:id], :only_path => false, :return_url => request.referer || "RETURN_URL").inspect %>.replace('RETURN_URL', window.location);
-iframe.width = <%= (params[:width] || '300px').inspect %>;
-iframe.height = <%= (params[:height] || '300px').inspect %>;
-document.getElementById("<%= params[:element_id] || "loginsane_frame" %>_wrapper").appendChild(iframe);
+(function(unique) {
+  document.write('<div id="<%= params[:element_id] || "loginsane_frame" %>' + unique + '"></div>');
+  var iframe = document.createElement('iframe');
+  iframe.id = <%= (params[:element_id] || "loginsane_frame").inspect %> + unique;
+  iframe.frameBorder = <%= params[:frameborder].to_i %>;
+  iframe.scrolling = "no";
+  iframe.src = <%= url_for(:action => "form", :id => params[:id], :only_path => false, :return_url => request.referer || "RETURN_URL").inspect %>.replace('RETURN_URL', window.location);
+  iframe.width = <%= (params[:width] || '300px').inspect %>;
+  iframe.height = <%= (params[:height] || '300px').inspect %>;
+  document.getElementById("<%= params[:element_id] || "loginsane_frame" %>" + unique).appendChild(iframe);
+})(<%= "#{rand(999)}#{Time.now.to_i}".inspect %>);
