option "Advanced » Email Domain" seem to have disappeared from facebook.com; it does not seem necessary anymore

--- a/app/views/services/_facebook.html.erb
+++ b/app/views/services/_facebook.html.erb
@@ -6,7 +6,7 @@
     <% if request_base_domain %>
     <li>Configure <b>Connect &raquo; Base Domain</b> as <b><%= request_base_domain %></b> to enable subdomains</li>
     <% end %>
-    <li>Configure <b>Advanced &raquo; Email Domain</b> if you are requiring users to provide their email address</li>
+    <!-- <li>Configure <b>Advanced &raquo; Email Domain</b> if you are requiring users to provide their email address</li> -->
     <li>Save your application</li>
     <li>Facebook will provide you with the information we require below</li>
   </ol>
